Change notification container position to fixed and increase z-index

--- a/src/style/ui.css
+++ b/src/style/ui.css
@@ -159,11 +159,11 @@
 }
 
 .taf-notification-container {
-  position: absolute;
+  position: fixed;
   right: 10px;
   bottom: 10px;
   font-size: 16pt;
-  z-index: 1200;
+  z-index: 99999;
 }
 
 .taf-notification-container .message {
